--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,16 @@
         android:theme="@style/Theme.BaiTap01"
         tools:targetApi="31">
         <activity
-            android:name=".activities.ListViewActivity"
+            android:name=".activities.GridViewActivity"
             android:exported="false" />
         <activity
             android:name=".activities.CustomListViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.ListViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.CustomGridViewActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
