--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.BaiTap01"
         tools:targetApi="31">
         <activity
+            android:name=".activities.UserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.RecyclerViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.CustomGridViewActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.GridViewActivity"
             android:exported="false" />
         <activity
@@ -22,7 +31,7 @@
             android:name=".activities.ListViewActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.CustomGridViewActivity"
+            android:name=".activities.AnimationMainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
